// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegularSpec 1`] = `
<DocumentFragment>
  <div>
    <h4
      class="mode-title"
    >
      Explicit HTTP(S) Proxy
    </h4>
    <p
      class="mode-description"
    >
      You manually configure your client application or device to use an HTTP(S) proxy.
    </p>
    <div>
      <div
        class="mode-entry"
      >
        <input
          checked=""
          type="checkbox"
        />
        Run HTTP/S Proxy
        <div
          class="mode-popover"
        >
          <button
            popovertarget=":r0:"
          >
            <i
              aria-hidden="true"
              class="fa fa-cog"
            />
          </button>
          <div
            id=":r0:"
            popover="auto"
          >
            <h4>
              Advanced Configuration
            </h4>
            <p>
              Listen Host
            </p>
            <span
              class="inline-input mode-input"
              tabindex="0"
            />
            <p>
              Listen Port
            </p>
            <span
              class="inline-input mode-input"
              placeholder="8080"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RegularSpec 2`] = `
<DocumentFragment>
  <div>
    <h4
      class="mode-title"
    >
      Explicit HTTP(S) Proxy
    </h4>
    <p
      class="mode-description"
    >
      You manually configure your client application or device to use an HTTP(S) proxy.
    </p>
    <div>
      <div
        class="mode-entry"
      >
        <input
          checked=""
          type="checkbox"
        />
        Run HTTP/S Proxy
        <div
          class="mode-popover"
        >
          <button
            popovertarget=":r1:"
          >
            <i
              aria-hidden="true"
              class="fa fa-cog"
            />
          </button>
          <div
            id=":r1:"
            popover="auto"
          >
            <h4>
              Advanced Configuration
            </h4>
            <p>
              Listen Host
            </p>
            <span
              class="inline-input mode-input"
              tabindex="0"
            />
            <p>
              Listen Port
            </p>
            <span
              class="inline-input mode-input"
              placeholder="8080"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        class="mode-error text-danger"
      >
        port already in use
      </div>
    </div>
  </div>
</DocumentFragment>
`;
